--- a/bundle.yaml
+++ b/bundle.yaml
@@ -1,8 +1,12 @@
 apiVersion: "1"
-version: "1"
+version: "2"
 id: "REPLACE_GITHUB_ORG-REPLACE_CONTROLLER_NAME"
 description: "CloudBees CI configuration bundle for the REPLACE_GITHUB_ORG REPLACE_CONTROLLER_NAME Controller"
 jcasc:
   - "jenkins.yaml"
 plugins:
   - "plugins.yaml"
+catalog:
+  - "plugin-catalog.yaml"
+items:
+  - "items.yaml"
